Do not spin in a loop when /proc/timer_stats cannot be written

Only set up the polling once the write has succeeded.

Fixes: https://bugs.freedesktop.org/show_bug.cgi?id=100626